--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -34,7 +34,7 @@
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex justify-content-between">
           <a href="#" class="navbar-brand d-flex align-items-center">
-            <%= Octicons::Octicon.new(:book, height: 32, fill: "currentcolor", class: "mr-2").to_svg %>
+            <%= octicon(:book, height: 32, fill: "currentcolor", class: "mr-2") %>
             <strong>Bookshelf</strong>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
