wip pipeline & logs

--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -21,11 +21,9 @@
               <p class="text-muted">Private book collection</p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
-              <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                <li><a href="#" class="text-white">Like on Facebook</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
+                <li><%= link_to "Library", routes.books_path, class: "text-white" %></li>
+                <li><%= link_to "Import Logs", routes.logs_path, class: "text-white" %></li>
               </ul>
             </div>
           </div>
@@ -33,7 +31,7 @@
       </div>
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand d-flex align-items-center">
+          <a href="/" class="navbar-brand d-flex align-items-center">
             <%= octicon(:book, height: 32, fill: "currentcolor", class: "mr-2") %>
             <strong>Bookshelf</strong>
           </a>
